<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!--  I'm ordering the Strings based on activity, so if you want to put 
    your strings in here just do it below your section -->
    
    
    <!-- Main Activity -->
    
    
    
    <string name="app_name">CS4444</string>
    <string name="action_settings">Settings</string>
    <string name="User_prompt">Choose account</string>
	
    <string-array name="Users_array">
        <item>Customer</item>
		<item>Host</item>
		<item>Server</item>
		<item>Cook</item>
		<item>Admin</item>
    </string-array>
    <string name="admin">Administrator</string>
    <string name="server">Server</string>
    <string name="cook">Cook</string>
    <string name="customer">Customer</string>
    <string name="order_instructions">Order Instructions</string>

    <string name="instructions">
* To pay for the full order, check all boxes and select a tip amount
then click submit. \n \n
* If you would like to split the order, simply check the items
you would would like to pay for and repeat the above steps. \n \n
* If you have any questions please notify your server with the help button in the top right corner.\n \n
 
Thank you! Have a great day!</string>
    
    <string-array name="wait_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
    </string-array>
    
    
    
    <string-array name="Table_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
    </string-array>
    <!--  Admin Strings Activity -->
    
    <!--  Backend Strings if required? -->
    
    <!--  Customer Strings Activity-->
    <string name="drinks">Drinks</string>
    <string name="menu">Menu</string>
    <string name="help">Help</string>
    <string name="chat">Chat</string>
    <string name="game">Game</string>
    <string name="pay">Pay</string>
    <string name="refill">Refill</string>
    <string name="submit">Submit</string>
    <string name="emptyCash">$0.00</string>
    <string name="TAX">8.25%</string>
    
    <!--  Customer ListView Order (name of this may get outdated -->
    <string name="removed">Removed</string>
    <string name="price">Price</string>
	<string name="subtotal">Subtotal</string>
	<string name="total">Total</string>
	<string name="tax">Tax</string>
	<string name="tab1_fragment_string">Soft drinks</string>
	<string name="tab2_fragment_string">Beer</string>
	<string name="tab3_fragment_string">Wine</string>
	<string name="tab1_menu_fragment_string">Appetizers</string>
	<string name="tab2_menu_fragment_string">Salads</string>
	<string name="tab3_menu_fragment_string">Entrees</string>
	<string name="tab4_menu_fragment_string">Pasta</string>		
    <string name="tab5_menu_fragment_string">Desserts</string>	
    <string name="tab6_menu_fragment_string">Popular Items</string>	
    <string name="editTextHint">Special Instructions</string>
    
    
    <!--  Waitstaff Strings Activity -->
    <string name="table">Tables</string>
    <string name="table_info">Table Information</string>
       
    
	<!-- COLORS TONS OF COLORS WOOOO -->
    <color name="light_blue">#33B5E5</color>
    <color name="light_purple">#AA66CC</color>
    <color name="light_green">#99CC00</color>
    <color name="light_orange">#FFBB33</color>
    <color name="light_red">#FF4444</color>
    <color name="dark_blue">#0099CC</color>
    <color name="dark_purple">#9933CC</color>
    <color name="dark_green">#669900</color>
    <color name="dark_orange">#FF8800</color>
    <color name="dark_red">#CC0000</color>
    
    <!-- COLOR SWATCH BLUE -->
    
        <!-- Android style -->
    <color name="android_green">#A4C639</color>

    <!-- Windows 8 style -->
    <color name="win8_magenta">#FF0097</color>
    <color name="win8_purple">#A200FF</color>
    <color name="win8_teal">#00ABA9</color>
    <color name="win8_lime">#8CBF26</color>
    <color name="win8_brown">#A05000</color>
    <color name="win8_pink">#E671B8</color>
    <color name="win8_orange">#F09609</color>
    <color name="win8_blue">#1BA1E2</color>
    <color name="win8_red">#E51400</color>
    <color name="win8_green">#339933</color>

    <!-- Common -->
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <color name="red">#FF0000</color>
    <color name="green">#008000</color>
    <color name="blue">#0000FF</color>
    <color name="yellow">#FFFF00</color>
    <color name="teal">#008080</color>
    <color name="Orange">#FFA500</color>
    <!-- Generic -->
    <!-- Generic Dark -->
    <color name="DarkTurquoise">#00CED1</color>
    <color name="DarkCyan">#008B8B</color>
    <color name="DarkGreen">#006400</color>
    <color name="DarkSalmon">#E9967A</color>
    <color name="DarkBlue">#00008B</color>
    <color name="DarkOrange">#FF8C00</color>
    <color name="DarkOrchid">#9932CC</color>
    <color name="DarkViolet">#9400D3</color>
    <color name="DarkMagenta">#8B008B</color>
    <color name="DarkRed">#8B0000</color>
    <color name="DarkOliveGreen">#556B2F</color>
    <color name="DarkSlateGray">#2F4F4F</color>
    <color name="DarkSlateBlue">#483D8B</color>
    <color name="DarkSeaGreen">#8FBC8F</color>
    <color name="DarkGray">#A9A9A9</color>
    <color name="DarkGoldenrod">#B8860B</color>
    <color name="DarkKhaki">#BDB76B</color>
    <!-- Generic Light -->
    <color name="LightGrey">#D3D3D3</color>
    <color name="LightSteelBlue">#B0C4DE</color>
    <color name="LightBlue">#ADD8E6</color>
    <color name="LightPink">#FFB6C1</color>
    <color name="LightSalmon">#FFA07A</color>
    <color name="LightCyan">#E0FFFF</color>
    <color name="LightCoral">#F08080</color>
    <color name="LightSkyBlue">#87CEFA</color>
    <color name="LightSeaGreen">#20B2AA</color>
    <color name="LightSlateGray">#778899</color>
    <color name="LightGreen">#90EE90</color>
    <color name="LightYellow">#FFFFE0</color>
    <color name="LightGoldenrodYellow">#FAFAD2</color>
    <!-- Generic Medium -->
    <color name="MediumSlateBlue">#7B68EE</color>
    <color name="MediumAquamarine">#66CDAA</color>
    <color name="MediumVioletRed">#C71585</color>
    <color name="MediumOrchid">#BA55D3</color>
    <color name="MediumPurple">#9370DB</color>
    <color name="MediumBlue">#0000CD</color>
    <color name="MediumTurquoise">#48D1CC</color>
    <color name="MediumSeaGreen">#3CB371</color>
    <color name="MediumSpringGreen">#00FA9A</color>

    <!-- a -->
    <color name="Azure">#F0FFFF</color>
    <color name="AliceBlue">#F0F8FF</color>
    <color name="AntiqueWhite">#FAEBD7</color>
    <color name="Aquamarine">#7FFFD4</color>
    <!-- b -->
    <color name="Beige">#F5F5DC</color>
    <color name="BurlyWood">#DEB887</color>
    <color name="Brown">#A52A2A</color>
    <color name="BlueViolet">#8A2BE2</color>
    <color name="aqua">#00FFFF</color>
    <color name="Bisque">#FFE4C4</color>
    <color name="BlanchedAlmond">#FFEBCD</color>
    <!-- c -->
    <color name="Cornsilk">#FFF8DC</color>
    <color name="Coral">#FF7F50</color>
    <color name="Chocolate">#D2691E</color>
    <color name="Crimson">#DC143C</color>
    <color name="CornflowerBlue">#6495ED</color>
    <color name="CadetBlue">#5F9EA0</color>
    <color name="Chartreuse">#7FFF00</color>
    <!-- d -->
    <color name="DeepPink">#FF1493</color>
    <color name="DeepSkyBlue">#00BFFF</color>
    <color name="DimGray">#696969</color>
    <color name="DodgerBlue">#1E90FF</color>
    <!-- e -->
    <!-- f -->
    <color name="fuchsia">#FF00FF</color>
    <color name="ForestGreen">#228B22</color>
    <color name="FloralWhite">#FFFAF0</color>
    <color name="FireBrick">#B22222</color>
    <color name="Fuchsia">#FF00FF</color>
    <!-- g -->
    <color name="Gold">#FFD700</color>
    <color name="GreenYellow">#ADFF2F</color>
    <color name="gray">#808080</color>
    <color name="Goldenrod">#DAA520</color>
    <color name="Gainsboro">#DCDCDC</color>
    <color name="GhostWhite">#F8F8FF</color>
    <!-- h -->
    <color name="Honeydew">#F0FFF0</color>
    <color name="HotPink">#FF69B4</color>
    <!-- i -->
    <color name="Indigo">#4B0082</color>
    <color name="Ivory">#FFFFF0</color>
    <color name="IndianRed">#CD5C5C</color>
    <!-- j -->
    <!-- k -->
    <color name="Khaki">#F0E68C</color>
    <!-- l -->
    <color name="lime">#00FF00</color>
    <color name="LawnGreen">#7CFC00</color>
    <color name="LavenderBlush">#FFF0F5</color>
    <color name="Linen">#FAF0E6</color>
    <color name="LemonChiffon">#FFFACD</color>
    <color name="Lavender">#E6E6FA</color>
    <color name="LimeGreen">#32CD32</color>
    <!-- m -->
    <color name="maroon">#800000</color>
    <color name="Moccasin">#FFE4B5</color>
    <color name="Maroon">#800000</color>
    <color name="MintCream">#F5FFFA</color>
    <color name="Magenta">#FF00FF</color>
    <color name="MidnightBlue">#191970</color>
    <color name="MistyRose">#FFE4E1</color>
    <!-- n -->
    <color name="navy">#000080</color>
    <color name="NavajoWhite">#FFDEAD</color>
    <!-- o -->
    <color name="olive">#808000</color>
    <color name="OliveDrab">#6B8E23</color>
    <color name="OrangeRed">#FF4500</color>
    <color name="OldLace">#FDF5E6</color>
    <color name="Orchid">#DA70D6</color>

    <!-- p -->
    <color name="PeachPuff">#FFDAB9</color>
    <color name="Pink">#FFC0CB</color>
    <color name="Peru">#CD853F</color>
    <color name="PaleGoldenrod">#EEE8AA</color>
    <color name="PaleVioletRed">#DB7093</color>
    <color name="Plum">#DDA0DD</color>
    <color name="PaleGreen">#98FB98</color>
    <color name="PowderBlue">#B0E0E6</color>
    <color name="PaleTurquoise">#AFEEEE</color>
    <color name="PapayaWhip">#FFEFD5</color>
    <!-- q -->
    <!-- r -->
    <color name="RoyalBlue">#4169E1</color>
    <color name="RosyBrown">#BC8F8F</color>
    <!-- s -->
    <color name="silver">#C0C0C0</color>
    <color name="Seashell">#FFF5EE</color>
    <color name="Snow">#FFFAFA</color>
    <color name="Sienna">#A0522D</color>
    <color name="SpringGreen">#00FF7F</color>
    <color name="SkyBlue">#87CEEB</color>
    <color name="SeaGreen">#2E8B57</color>
    <color name="SteelBlue">#4682B4</color>
    <color name="SlateGray">#708090</color>
    <color name="SlateBlue">#6A5ACD</color>
    <color name="SaddleBrown">#8B4513</color>
    <color name="Salmon">#FA8072</color>
    <color name="SandyBrown">#F4A460</color>

    <!-- t -->
    <color name="Thistle">#D8BFD8</color>
    <color name="Turquoise">#40E0D0</color>
    <color name="Tan">#D2B48C</color>
    <color name="Tomato">#FF6347</color>
    <!-- u -->
    <!-- v -->
    <color name="purple">#800080</color>
    <color name="Violet">#EE82EE</color>
    <!-- w -->
    <color name="WhiteSmoke">#F5F5F5</color>
    <color name="Wheat">#F5DEB3</color>
    <!-- x -->
    <!-- y -->

    <color name="YellowGreen">#9ACD32</color>
    <!-- z -->

    <string name="lblTip">How much would you like to tip?</string>

    <string name="round_up">Would you like to round up to the nearest dollar?</string>


    
    
    

    

    
    

    
</resources>