<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/DimGray"
        >

        <TextView
            android:id="@+id/subtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="@string/subtotal"
            android:textSize="18sp" />
        
         <TextView
            android:id="@+id/subtotalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:text="subtotalValue"
            android:textSize="18sp" />
        

        <TextView
            android:id="@+id/tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/subtotal"
            android:text="@string/tax"
            android:textSize="18sp" />
        
        <TextView
            android:id="@+id/taxValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/subtotalValue"
            android:text="TaxValue"
            android:textSize="18sp"
            />

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tax"
            android:text="@string/total"
            android:textSize="18sp" />
        
        <TextView
            android:id="@+id/totalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/taxValue"
            android:layout_alignParentRight="true"
            android:text="totalValue"
            android:textSize="18sp" />

    </RelativeLayout>
